--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,33 @@
   <title>game</title>
 </head>
 <body>
-
+<div class="game_container">
+  <table class="gametable" id="gameTable">
+    <tr class="tabe_column">
+      <td class="table_cell" id="cell_1"></td>
+      <td class="table_cell" id="cell_2"></td>
+      <td class="table_cell" id="cell_3"></td>
+      <td class="table_cell" id="cell_4"></td>
+    </tr>
+    <tr class="tabe_column">
+      <td class="table_cell" id="cell_5"></td>
+      <td class="table_cell" id="cell_6"></td>
+      <td class="table_cell" id="cell_7"></td>
+      <td class="table_cell" id="cell_8"></td>
+    </tr>
+    <tr class="tabe_column">
+      <td class="table_cell" id="cell_9"></td>
+      <td class="table_cell" id="cell_10"></td>
+      <td class="table_cell" id="cell_11"></td>
+      <td class="table_cell" id="cell_12"></td>
+    </tr>
+    <tr class="tabe_column">
+      <td class="table_cell" id="cell_13"></td>
+      <td class="table_cell" id="cell_14"></td>
+      <td class="table_cell" id="cell_15"></td>
+      <td class="table_cell" id="cell_16"></td>
+    </tr>
+  </table>
+</div>
 </body>
 </html>
